gcc/testsuite/gcc.target/i386/avx512f-vcmppd-3.c
@@ -1,0 +1,4 @@
+/* { dg-do compile } */
+/* { dg-options "-O0 -mavx512f" } */
+
+#include "avx512f-vcmppd-1.c"
